# scatbot

./: .flake8  .gitignore  CONTRIBUTING.md  README.md  daphbot_services.cfg  pyproject.toml  restart.sh  scatbot_services.cfg  services.cfg  start.sh  stop.sh
.github/workflows/: ci.yml
debug/: benchmark-pytorch.py  commons  test-audio.py  test-blinka.py  test-buttons.py  test-camera.py  test-depth-camera.py  test-jetson-inference.sh  test-lights.py  test-motorkit.py  test-opencv.py  test-pytorch.py  test-quart.py  test-servo.py  test-tflite-camera.py  test-tof-multiplexer.py  test-torch-detect-camera.py  test-torch-detect.py  test-vl53L4.py  test-voltage-sensor.py  test-yolo.py
debug/experiment/: chatgpt-follow.py
docs/: performance-log.md
sbin/: setup-tflite-data.sh  setup.sh  upload.sh
sbin/nano-setup/: setup-jetson-circuitpython.sh  setup-jetson-inference.sh  setup-jetson-opencv45.sh
sbin/os/: rc.local
sbin/pi4-setup/: libtbb.sh  protobuf.sh  setup-librealsense.sh  yolov5.sh
sbin/pizero-setup/: setup.sh
src/: start-central-hub.py  start_battery.py  start_behavior.py  start_central_hub.py  start_compass.py  start_depth.py  start_hazards.py  start_motor_control.py  start_onboard_ui.py  start_system_stats.py  start_vision.py  start_vision_realsense.py  start_web_server.py  test_pytorch_detect.py
src/battery/: provider.py
src/behavior/: behavior.py  behavior_state.py  behavior_task.py
src/central_hub/: server.py
src/commons/: base_camera.py  compass.py  constants.py  enums.py  log.py  messages.py  setup_logging.py  shared_state.py  web_utils.py
src/compass/: provider.py
src/depth/: camera_realsense.py  provider.py  server.py
src/hazards/: provider.py
src/motor_control/: provider.py
src/onboard_ui/: leds.py  onboard_ui.py  system_info.py
src/system_stats/: provider.py
src/vision/: camera_opencv.py  camera_realsense.py  depth_provider.py  index.html  provider.py  pytorch_detect.py  recognition.py  recognition_provider.py  server.py  tflite_detect.py
src/vision_realsense/: camera_realsense.py  depth_provider.py  server.py
src/webapp/: .eslintrc.json  package.json  server.py
tests/: conftest.py  test_behavior.py  test_central_hub.py
tests/helpers/: behavior.py  central_hub.py  constants.py
(+39 files in other folders)
