[tool.poetry]
name = "scatbot"
version = "0.1.0"
description = "A robot to play with my dog"
authors = ["Bee <bee.wilkerson@ymail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
quart = "^0.18.3"
websockets = "^10.4"
Flask = "^2.2.3"
Flask-Cors = "^3.0.10"
argparse = "^1.4.0"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
opencv-contrib-python = "^4.7.0.72"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
tflite-support = "0.4.0"
protobuf = ">=3.18.0,<4"
adafruit-circuitpython-dotstar = "^2.2.6"
adafruit-circuitpython-motor = "^3.4.9"
adafruit-circuitpython-bmp280 = "^3.2.19"
adafruit-python-shell = "^1.6.0"
click = "^8.1.3"
adafruit-circuitpython-motorkit = "^1.6.11"
adafruit-circuitpython-tca9548a = "^0.7.0"

# TODO: pyaudio fails to install (compile) in github actions container due to missing
#    portaudio.h.  Prolly needs a to run `apt install` for portaudio-dev or such
# pyaudio = "^0.2.13"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-unused-arguments = "^0.0.13"
black = "^23.1.0"
pre-commit = "^3.1.0"
pytest = "^7.2.1"
websocket-client = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
